--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Bounce</title>
 </head>
 <body>
-<h1>Pogo Pogo Pogo Pogo Pogo Pogo Pogo!</h1>
+<h1>Who knows this song?</h1>
+<h2>Bounce! Pogo, Pogo, Pogo, Pogo, Pogo, Pogo, Pogo</h2>
 </body>
 </html>
