Added band name

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
 <h1>Who knows this song?</h1>
 <h2>Bounce! Pogo, Pogo, Pogo, Pogo, Pogo, Pogo, Pogo</h2>
+<h2>This is System of a Down!</h2>
 </body>
 </html>
